<resources>
    <string name="app_name">Faster Finance</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="sign_up">SignUp</string>
    <string name="or">OR</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="account_holder">Account holder</string>
    <string name="account_number">Account no.</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch_name">Branch name</string>
    <string name="bank_name">Bank name</string>
    <string name="pay">Pay</string>
    <string name="add_money">Add money</string>
    <string name="loading">Loading…</string>
    <string name="powered_by_truly">Powered by Truly</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="pay_with_faster_finance_and_get_exclusive_cashback_and_rewards_point">Pay with faster finance ang get exclusive cashback and rewards points.</string>
    <string name="welcome_to_faster_financial_service">Welcome to faster financial service!</string>
    <string name="start_your_cashless_journey_now">Start your cashless journey now with \n Faster financial Service</string>
    <string name="count">%d%%</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faster_financial_services">Faster Financial Services</string>
    <string name="add_money_to_your_wallet">Add money to your wallet</string>
    <string name="send_money_from_your_account">Send money from your account</string>
    <string name="receiver_name">Receiver name</string>
    <string name="amount">Amount</string>
    <string name="message">Message</string>
    <string name="send_money">Send Money</string>
    <string name="send_money_to">Send money to %s.</string>
    <string name="payment_successfully_completed_to">Payment successfully completed to %s.</string>
</resources>